--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "harsh-router": "^1.0.0"
+    "harsh-router": "^1.0.0",
+    "unix-timestamp": "^1.0.4"
   },
   "name": "api-test",
   "version": "1.0.0",
@@ -11,6 +12,6 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "pull": "gip pull && pm2 restart index.js"
+    "pull": "gip pull && yarn && pm2 restart index.js"
   }
 }
